--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/axios-mock-adapter": "^1.10.0",
     "@types/enzyme": "^3.9.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "24.0.11",
@@ -45,6 +46,7 @@
     "@types/react-dom": "16.8.3",
     "@types/react-redux": "^7.0.6",
     "@types/react-test-renderer": "^16.8.1",
+    "axios-mock-adapter": "^1.16.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.0",
     "enzyme-to-json": "^3.3.5",
