--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ before_install:
 script:
   - npm test
   - npm run build
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $github_token
-  local_dir: build
-  on:
-    branch: master
+#deploy:
+ #provider: pages
+  #skip_cleanup: true
+ # github_token: $github_token
+  #local_dir: build
+  #on:
+   # branch: master
